# tcpquic-proxy

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  build.md
.claude/: settings.json
.cursor/: mcp.json
build-x64/crashpad-probe-src/: CMakeLists.txt  probe.cpp
cert/: README.md  ca.crt  ca.key  generate-certs.ps1  generate-certs.sh
cmake/: bootstrap_crashpad.cmake  windows7_msquic_compat.h
docs/: 2026-07-11-darwin-http-connect-zombie-relay.md  20gbps-paramenter.md  admin-api-redesign-design.md  admin-api-redesign-dev-plan.md  built-in-speed-test-20260612.md  config_guide.md  config_guide_cn.md  crashpad-build-dependency_cn.md  darwin-issues.md  darwin-segmentfault.md  dgx-always-pending-admin-metrics-design-20260612.md  dgx-current-io-disable-1rtt-16x16-20260620.md  dgx-current-io-isolation-20260620.md  dgx-current-io-matrix-20260620.md  dgx-current-io-rerun-4x4-16x16-20260620.md  dgx-dual-proxy-after-rearm-20260615.md  dgx-interconnect-test-plan.md  dgx-iperf-proxy-bottleneck-analysis-20260615.md  dgx-iperf-proxy-throughput-optimization-next-steps-20260615.md  dgx-msquic-secnetperf-bbr-netstats-limit5000000-doublewindows-20260621-summary.md  dgx-msquic-secnetperf-bbr-netstats-limit5000000-sendbuf64m-20260621-summary.md  dgx-msquic-secnetperf-bbr-queue-lossdiag-20260621-summary.md  dgx-msquic-secnetperf-bbr-streamstats-limit5000000-20260621-summary.md  dgx-msquic-secnetperf-netem-100ms-200ms-5loss-limit5000000-20260621-summary.md  dgx-msquic-secnetperf-param-matrix-20260621-summary_cn.md  dgx-msquic-udp-buffer-optimization-20260612.md  dgx-msquic-udp-buffer-optimization-always-pending-20260612.md  dgx-msquic-udp-buffer-optimization-sync-write-20260612.md  (+47 more)
src/: CMakeLists.txt  README.md  acl.cpp  acl.h  admin_http.cpp  admin_http.h  compress.h  config.h  http_connect_server.cpp  http_connect_server.h  key_parameter.md  linux_relay_worker.cpp  linux_relay_worker.h  main.cpp  platform_socket_posix.cpp  platform_socket_win.cpp  quic_credentials_win.h  quic_session.cpp  quic_session.h  relay.cpp  relay.h  relay_blocking_demo.h  router_runtime.h  server_metrics.cpp  server_metrics.h  socks5_server.cpp  socks5_server.h  tcp_dialer.cpp  tcp_dialer.h  tcp_tunnel.cpp  tcp_tunnel.h  tcp_write_queue.cpp  tcp_write_queue.h  thread_model_cn.md  thread_pool.cpp  thread_pool.h  tuning.cpp  tuning.h  tunnel_reaper.cpp  tunnel_reaper.h  (+4 more)
src/acl/: acl.cpp  acl_filter.cpp  acl_filter.h  acl_matcher.h
src/cmake/: libuv_relay_metrics.cmake  libuv_relay_quic_to_tcp.cmake  libuv_relay_tcp_to_quic.cmake  libuv_relay_terminal.cmake
src/config/: config.cpp  config.h  tuning.cpp  tuning.h
src/docs/: key_parameter.md  thread_model_cn.md
src/ingress/: client_ingress_reactor.cpp  client_ingress_reactor.h  client_ingress_state.cpp  client_ingress_state.h  http_connect_server.cpp  http_connect_server.h  proxy_auth.cpp  proxy_auth.h  socks5_server.cpp  socks5_server.h
src/platform/: crash_dump.cpp  crash_dump.h  exe_path.cpp  exe_path.h  platform_socket.h  platform_socket_posix.cpp  platform_socket_win.cpp  quic_credentials_win.cpp
src/protocol/: compress.cpp  compress.h  control_protocol.cpp  control_protocol.h  quic_address.cpp  quic_address.h  quic_session.cpp  quic_session.h
src/runtime/: admin_auth.cpp  admin_auth.h  admin_config.cpp  admin_config.h  admin_console.cpp  admin_console.h  admin_console_pico_css.inc  admin_http.cpp  admin_http.h  admin_httplib.h  admin_memory.cpp  admin_memory.h  client_peer_runtime.cpp  client_peer_runtime.h  darwin_reactor.cpp  darwin_reactor.h  linux_reactor.cpp  linux_reactor.h  listen_socket.cpp  listen_socket.h  memory_stats.cpp  memory_stats.h  relay_metrics.cpp  relay_metrics.h  router_runtime.cpp  router_runtime.h  runtime_config_file_store.cpp  runtime_config_file_store.h  scoped_socket.h  server_admin.cpp  server_admin.h  server_metrics.cpp  server_metrics.h  server_runtime_config.cpp  server_runtime_config.h  shutdown.cpp  shutdown.h  socket_reactor.h  speed_test.cpp  speed_test.h  (+9 more)
src/tunnel/: ares_dns_resolver.cpp  ares_dns_resolver.h  client_tunnel_open.cpp  client_tunnel_open.h  darwin_relay_event_queue.h  darwin_relay_worker.cpp  darwin_relay_worker.h  libuv_allocator.cpp  libuv_allocator.h  libuv_relay.cpp  libuv_relay_event_queue.h  libuv_relay_internal.h  libuv_relay_quic_to_tcp.cpp  libuv_relay_tcp_to_quic.cpp  libuv_relay_terminal.cpp  libuv_relay_worker.cpp  libuv_relay_worker.h  linux_relay_buffer_pool.cpp  linux_relay_buffer_pool.h  linux_relay_event_queue.h  linux_relay_worker.cpp  linux_relay_worker.h  quic_receive_guard.h  relay.cpp  relay.h  relay_alloc.cpp  relay_alloc.h  relay_blocking_demo.cpp  relay_buffer.cpp  relay_buffer.h  relay_buffer_pool.cpp  relay_buffer_pool.h  relay_error.h  relay_runtime_snapshot.h  server_dial_reactor.cpp  server_dial_reactor.h  stream_lifetime.cpp  stream_lifetime.h  tcp_dialer.cpp  tcp_tunnel.cpp  (+10 more)
src/unittest/: acl_filter_test.cpp  acl_test.cpp  admin_http_test.cpp  ares_dns_resolver_test.cpp  blocking_relay_demo_test.cpp  client_ingress_reactor_test.cpp  client_ingress_state_test.cpp  client_peer_runtime_test.cpp  client_tunnel_open_test.cpp  compress_test.cpp  config_router_test.cpp  control_protocol_test.cpp  darwin_reactor_test.cpp  darwin_relay_metrics_test.cpp  darwin_relay_worker_io_test.cpp  darwin_relay_worker_queue_test.cpp  http_connect_server_test.cpp  libuv_allocator_test.cpp  libuv_relay_metrics_test.cpp  libuv_relay_quic_to_tcp_test.cpp  libuv_relay_ready_contract_test.cpp  libuv_relay_registration_test.cpp  libuv_relay_runtime_stop_test.cpp  libuv_relay_tcp_to_quic_test.cpp  libuv_relay_worker_queue_test.cpp  libuv_terminal_convergence_test.cpp  linux_reactor_test.cpp  linux_relay_buffer_pool_test.cpp  linux_relay_worker_io_test.cpp  linux_relay_worker_queue_test.cpp  linux_terminal_convergence_stubs.cpp  linux_terminal_convergence_test.cpp  memory_stats_test.cpp  msquic_api_stub.cpp  platform_socket_test.cpp  production_linkage_guard_test.cpp  proxy_auth_test.cpp  quic_session_reconnect_test.cpp  quic_settings_test.cpp  relay_alloc_test.cpp  (+26 more)
(+1069 files in other folders)
